refactor: standardize HTML formatting and improve readability in member form head

--- a/apps/web/public/member-form-head.html
+++ b/apps/web/public/member-form-head.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Head of Family - Member Information Form</title>
-    <link rel="stylesheet" href="member-form.css" />
+    <link rel="stylesheet" href="member-form.css">
   </head>
   <body>
     <div class="header">
@@ -109,19 +109,19 @@
         <label>Marital Status:</label>
         <div class="checkbox-group marital-status">
           <div class="checkbox-item">
-            <input type="checkbox" id="single" />
+            <input type="checkbox" id="single">
             <label for="single">Single</label>
           </div>
           <div class="checkbox-item">
-            <input type="checkbox" id="married" />
+            <input type="checkbox" id="married">
             <label for="married">Married</label>
           </div>
           <div class="checkbox-item">
-            <input type="checkbox" id="widowed" />
+            <input type="checkbox" id="widowed">
             <label for="widowed">Widowed</label>
           </div>
           <div class="checkbox-item">
-            <input type="checkbox" id="divorced" />
+            <input type="checkbox" id="divorced">
             <label for="divorced">Divorced</label>
           </div>
         </div>
@@ -156,15 +156,15 @@
       <div class="section-title">Dietary Preference</div>
       <div class="checkbox-group">
         <div class="checkbox-item">
-          <input type="checkbox" id="diet-none" />
+          <input type="checkbox" id="diet-none">
           <label for="diet-none">None</label>
         </div>
         <div class="checkbox-item">
-          <input type="checkbox" id="diet-vegetarian" />
+          <input type="checkbox" id="diet-vegetarian">
           <label for="diet-vegetarian">Vegetarian</label>
         </div>
         <div class="checkbox-item">
-          <input type="checkbox" id="diet-vegan" />
+          <input type="checkbox" id="diet-vegan">
           <label for="diet-vegan">Vegan</label>
         </div>
       </div>
@@ -256,20 +256,20 @@
     </div>
 
     <script>
-      "use strict"
-      // Optional: Add print button functionality
-      window.addEventListener("load", () => {
-        // Add print button (hidden when printing)
-        const printButton = document.createElement("button")
-        printButton.textContent = "Print Form"
-        printButton.style.cssText =
-          "position: fixed; top: 20px; right: 20px; padding: 10px 20px; background: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 14px; z-index: 1000;"
-        printButton.className = "no-print"
-        printButton.onclick = () => {
-          window.print()
-        }
-        document.body.appendChild(printButton)
-      })
+    "use strict";
+    // Optional: Add print button functionality
+    window.addEventListener("load", () => {
+      // Add print button (hidden when printing)
+      const printButton = document.createElement("button");
+      printButton.textContent = "Print Form";
+      printButton.style.cssText =
+        "position: fixed; top: 20px; right: 20px; padding: 10px 20px; background: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 14px; z-index: 1000;";
+      printButton.className = "no-print";
+      printButton.onclick = () => {
+        window.print();
+      };
+      document.body.appendChild(printButton);
+    });
     </script>
   </body>
 </html>
